--- a/app/views/shared/_profileCard.html.erb
+++ b/app/views/shared/_profileCard.html.erb
@@ -1,24 +1,25 @@
 <div data-controller="bookingform">
-  <h2><%= @assassin.name  %>'s PROFILE</h2>
-  <div class="cards-profile">
-    <div class="card-profile">
-      <%= cl_image_tag @assassin.photo.key, width: 350, height: 350, crop: :fill, gravity: :faces %>
-      <div class="card-profile-infos">
-        <h2 class='card-title'><span style="color:black">Name : </span><%= @assassin.name %></h2>
-        <h2 class='card-title'><span style="color:black">Weapon : </span><%= @assassin.weapon %></h2>
-        <h2 class='card-title'><span style="color:black">Rating : </span><%= @score %></h2>
-        <h2 class='card-title'><span style="color:black">Rate : </span><%= @assassin.price %> <span style="color:black"> 💰Bitcoin(s)</span></h2>
-        <% if policy(@assassin).edit? %>
-          <%= link_to "Edit Profile", edit_assassin_path(@assassin), class: "btn btn-dark" %>
-        <% else %>
-          <button id='btnBook' class="btn btn-dark" data-action="bookingform#showTargets">HIRE ME!</button>
-        <% end %>
-      </div>
-    </div>
-    <div class="assassin-desc">
-      <p>Some random things about <%= @assassin.name %> : <br>
-        <%= @assassin.description %></p>
-    </div>
-  </div>
-  <%= render "shared/form", assassin: @assassin, booking: @booking %>
+	<h2><%= @assassin.name  %>'s PROFILE</h2>
+	<div class="cards-profile">
+		<div class="card-profile">
+			<%= cl_image_tag @assassin.photo.key, width: 350, height: 350, crop: :fill, gravity: :faces %>
+			<div class="card-profile-infos">
+				<h2 class='card-title'><span style="color:black">Name : </span><%= @assassin.name %></h2>
+				<h2 class='card-title'><span style="color:black">Weapon : </span><%= @assassin.weapon %></h2>
+				<h2 class='card-title'><span style="color:black">Rating : </span><%= @score %></h2>
+				<h2 class='card-title'><span style="color:black">Rate : </span><%= @assassin.price %> <span style="color:black"> 💰Bitcoin(s)</span></h2>
+				<% if policy(@assassin).edit? %>
+					<%= link_to "Edit Profile", edit_assassin_path(@assassin), class: "btn btn-dark" %>
+				<% else %>
+					<button id='btnBook' class="btn btn-dark" data-action="bookingform#showTargets">HIRE ME!</button>
+				<% end %>
+			</div>
+		</div>
+		<div class="assassin-desc">
+			<p>Some random things about <%= @assassin.name %> : <br>
+			</p>
+			<%= simple_format(@assassin.description) %>
+		</div>
+	</div>
+	<%= render "shared/form", assassin: @assassin, booking: @booking %>
 </div>
