--- a/app/views/assassins/edit.html.erb
+++ b/app/views/assassins/edit.html.erb
@@ -1,12 +1,13 @@
 <%= render "shared/banner"%>
 <div class="container">
-  <h2>Update Your Profile Here</h2>
-  <%= simple_form_for(@assassin) do |f| %>
-    <%= f.input :name %>
-    <%= f.input :weapon %>
-    <%= f.input :description %>
-    <%= f.input :price %>
-    <%= f.input :photo, as: :file %>
-    <%= f.submit "Update" %>
-  <% end %>
+	<h2>Update Your Profile Here</h2>
+	<%= simple_form_for(@assassin) do |f| %>
+		<%= f.input :name %>
+		<%= f.input :weapon %>
+		<%= f.input :description %>
+		<%= f.input :price %>
+		<%= f.input :photo, as: :file %>
+		<%= f.submit "Update" %>
+	<% end %>
+	<%= link_to "Cancel", assassin_path(@assassin), class: "btn btn-danger" %>
 </div>
